--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "heroicons-react": "^1.4.1",
+    "ionicons": "^7.2.1",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
