--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "framer-motion": "^10.16.16",
     "heroicons-react": "^1.4.1",
     "ionicons": "^7.2.1",
     "next": "14.0.3",
