--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
+    "@mui/material": "^5.15.2",
     "framer-motion": "^10.16.16",
     "heroicons-react": "^1.4.1",
     "ionicons": "^7.2.1",
