--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@formspree/react": "^2.5.1",
     "@heroicons/react": "^2.0.18",
     "@mui/material": "^5.15.2",
     "framer-motion": "^10.16.16",
