--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "framer-motion": "^10.16.16",
     "heroicons-react": "^1.4.1",
     "ionicons": "^7.2.1",
-    "next": "14.0.3",
+    "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
